hard-gists/5437131/run.log
=== Docker Run Log for 5437131 ===
Started at: Mi 29. Okt 15:41:17 CET 2025

[2025-10-29 15:41:17] START: Running container for 5437131
[2025-10-29 15:41:18] SUCCESS: Container 8174296e3c7b6ed83e532879e86ad3a4db40439ebaa40b20d346a74b47296a40 started for 5437131
=== Container logs for 5437131 ===
  File "/snippet.py", line 62
    def slot_trade(self, gox, (date, price, volume, typ, own)):
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Function parameters cannot be parenthesized
=== End of logs for 5437131 ===
[2025-10-29 15:41:20] INFO: Container 8174296e3c7b6ed83e532879e86ad3a4db40439ebaa40b20d346a74b47296a40 has stopped
